# budget-now

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  commandLineParser.cpp  commandLineParser.hpp  controller.cpp  controller.hpp  dataClasses.hpp  dateManager.cpp  dateManager.hpp  howToUse.txt  main.cpp  model.cpp  model.hpp  notes.md  view.cpp  view.hpp
src/: controller.hpp  dateManager.cpp  model.cpp  model.hpp
tests/: CMakeLists.txt  expected_add_budget.json  expected_add_category.json  expected_add_expense.json  expected_add_income.json  expected_copy_budget.json  expected_print_budget.txt  expected_print_category.txt  expected_print_list.txt  expected_set_primary.json  model_test.cpp  source_helptext.txt  source_test.json  test_controller.cpp  test_model.cpp  test_view.cpp  view_test.cpp
