cmake_minimum_required(VERSION 3.16.3)
project(BudgetNow)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_DEBUG")
add_executable(budgetApp main.cpp commandLineParser.cpp controller.cpp model.cpp view.cpp commandLineParser.hpp controller.hpp model.hpp view.hpp dataClasses.hpp json.hpp date.h dateManager.hpp dateManager.cpp)